test/files/neg/macro-invalidimpl-h.check
Macros_Test_2.scala:2: error: type arguments [String] do not conform to method foo's type parameter bounds [U <: Int]
  def foo = macro Impls.foo[String]
                           ^
one error found
